--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,8 @@
 body
 {
      color:rgb(3, 3, 3);
-<<<<<<< HEAD
-     text-align : left;
-     font-family : "curier";
-=======
      text-align : center;
-     font-family : "Arial";
->>>>>>> cabecera
+     font-family : "arial";
      font-size: 16px;
      margin: 0;
      padding: 0;
